--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.11.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
+    "nextjs-toploader": "^3.7.15",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
